package tbclient;
    syntax = "proto3";
import "../Error.proto";
import "../PostInfoList.proto";

message UserPostResIdl {
  message DataRes {
    repeated PostInfoList post_list = 1;
    uint32 hide_post = 2;
    uint64 time = 3;
    uint64 ctime = 4;
    uint64 logid = 5;
    int32 mask_type = 6;
    int32 view_card_num = 7;
    int32 reddot_deleted_thread = 8;
  }
  Error error = 1;
  DataRes data = 2;
}

